# avassa-client-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build-lua-runner-image.sh  build-stats-aggregator-image.sh  build-temperature-image.sh  deny.toml  run-semver-checks
.cargo/: config
alpine-cargo/: config
avassa-client/: Cargo.toml
avassa-client/src/: lib.rs  strongbox.rs  types.rs  utilities.rs  volga.rs
avassa-client/src/volga/: consumer.rs  mod.rs  producer.rs
deployment/: high-resource.app.yaml  high-resource.dep.yaml  stats-aggregator.app.yaml  stats-aggregator.dep.yaml  temp-aggregator.app.yml  temp-collector.app.yml  temp.dep.yaml
examples/: volga-consume.rs
examples-common/: Cargo.toml
examples-common/src/: lib.rs
hvac-common/: Cargo.toml
hvac-common/src/: lib.rs
lua-runner/: Cargo.toml  Dockerfile  build.rs
lua-runner/src/: main.rs  webserver.rs
lua-runner/src/lua/: mod.rs  volga.rs
src/: lib.rs  login_helper.rs  strongbox.rs  volga.rs
src/strongbox/: mod.rs  tls.rs
src/supctl/: mod.rs
src/utilities/: alerts.rs  application_metrics.rs  audit_trail.rs  host_metrics.rs  mod.rs  supd_metrics.rs  types.rs
src/utilities/types/: mod.rs
src/utilities/types/state/: application.rs  application_deployment.rs  cluster_host.rs  site.rs  volga.rs
src/volga/: consumer.rs  log_query.rs  mod.rs  producer.rs
stats-aggregator/: Cargo.toml  Dockerfile
stats-aggregator/src/: main.rs
temperature-aggregator/: Cargo.toml
temperature-aggregator/src/: main.rs
temperature-collector/: Cargo.toml  Dockerfile
temperature-collector/src/: main.rs
