[package]
name = "avassa-client"
version = "0.1.6"
authors = ["Fredrik Jansson <fj@avassa.io>"]
license = "Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/avassa-client"
description = "Library for integrating with the Avassa APIs"
repository="https://gitlab.com/avassa-public/avassa-client-rs"

[features]
utilities = []
login-helper = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
pin-project-lite = "0.2"
reqwest = { version="0.11", features = ["json"] }
serde = { version = "1", features=["derive"] }
serde_json = { version = "1" }
thiserror = "1"
tokio = { version="1", features = ["sync", "time"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version="0.16", default_features=false, features = ["native-tls"] }
tracing = "0.1"
tracing-futures="0.2"
url = "2"

[dev-dependencies]
tokio = { version="1", features = ["macros", "rt-multi-thread"] }
