[package]
name = "avassa-client"
version = "0.4.3"
authors = ["Fredrik Jansson <fj@avassa.io>"]
license = "Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/avassa-client"
description = "Library for integrating with the Avassa APIs"
repository="https://gitlab.com/avassa-public/avassa-client-rs"
categories = ["api-bindings"]
keywords = ["avassa"]

[features]
utilities = []
login-helper = []
supctl = []

full = ["utilities", "login-helper", "supctl"]

[dependencies]
bytesize = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
pin-project = "1"
reqwest = { version="0.11", features = ["json"] }
serde = { version = "1", features=["derive"] }
serde_json = { version = "1" }
thiserror = "1"
tokio = { version="1", features = ["sync", "time", "fs"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version="0.20", default_features=false, features = ["native-tls"] }
tracing = "0.1"
tracing-futures="0.2"
url = "2"
bytes = "1.1.0"

[dev-dependencies]
tokio = { version="1", features = ["full"] }
anyhow = { version = "1" }
