[package]
name = "avassa-client"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
native-tls = "0.2"
pin-project = "1"
reqwest = { version="0.11", features = ["json"] }
serde = { version = "1", features=["derive"] }
serde_json = { version = "1" }
thiserror = "1"
tokio = { version="1", features = ["macros", "sync", "time"] }
tokio-native-tls = "0.3"
tokio-stream = "*"
tokio-tungstenite = { version="0.14", features = ["native-tls"] }
tungstenite = "0.13"
url = "2"
