[package]
name = "examples-common"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client = { path="../avassa-client" }
log = "0.4"
serde_json = "1"
thiserror = "1"
