[package]
name = "lua-runner"
version = "0.3.0"
authors = ["Fredrik Jansson <fredrik.jansson.se@gmail.com>"]
edition = "2018"

[dependencies]
anyhow="1"
fastping-rs = "0.1"
futures = "0.3"
futures-util = "0.3"
http="0.2"
log = "0.4"
parking_lot = "*"
pretty_env_logger = "0.4"
reqwest = { version="0.10"}
rlua = "0.17"
serde_json = { version = "1" }
thiserror = "1"
tokio = { version="0.2", features = ["macros", "net", "rt-threaded", "sync"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
url = "2"
avassa-client = { path = "../avassa-client" }
warp = "0.2"

[build-dependencies]
vergen="3"

[dev-dependencies]
# rexpect = "*"

