[package]
name = "lua-runner"
version = "0.3.0"
authors = ["Fredrik Jansson <fredrik.jansson.se@gmail.com>"]
edition = "2018"

[dependencies]
anyhow="1"
fastping-rs = "0.1"
futures = "0.3"
futures-util = "0.3"
http="0.2"
log = "0.4"
parking_lot = "*"
pretty_env_logger = "0.4"
reqwest = { version="0.11"}
rlua = "0.17"
serde_json = { version = "1" }
thiserror = "1"
tokio = { version="1", features = ["macros", "net", "rt-multi-thread", "sync"]}
url = "2"
avassa-client = { path = "../avassa-client" }
warp = "0.3"

[build-dependencies]
vergen="3"

[dev-dependencies]
# rexpect = "*"

