[package]
name = "stats-aggregator"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client={ path="../avassa-client" }
chrono = "0.4"
examples-common = { path="../examples-common"}
futures = "0.3"
futures-util="0.3"
hvac-common = { path="../hvac-common" }
hyper = { version="0.14", features=["server"]}
lazy_static = "1"
log="0.4"
pretty_env_logger="0.4"
prometheus = "0.11"
serde = { version = "1" }
serde_json = "1"
tokio = { version="1", features = ["full"] }

[build-dependencies]
vergen="3"
