[package]
name = "temperature-aggregator"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client={ path="../avassa-client" }
chrono = "0.4"
futures = "0.3"
futures-util="0.3"
hvac-common = { path="../hvac-common" }
hyper = "0.13"
lazy_static = "1"
# plotters = {version="0.3", default-features=false, features=["svg_backend", "all_series", "chrono"]}
prometheus = "0.10"
serde = { version = "1" }
serde_json = "1"
tokio = { version="0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
