[package]
name = "temperature-aggregator"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client={ path="../avassa-client" }
chrono = "0.4"
futures = "0.3"
futures-util="0.3"
hvac-common = { path="../hvac-common" }
hyper = { version="0.14", features=["server"]}
lazy_static = "1"
prometheus = "0.11"
serde = { version = "1" }
serde_json = "1"
tokio = { version="1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
vergen="3"
