[package]
name = "temperature-collector"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client={ path="../avassa-client" }
chrono = "0.4"
hvac-common = { path="../hvac-common" }
rand="0.7"
serde_json = "1"
tokio = { version="1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
vergen="3"
