[package]
name = "temperature-collector"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
avassa-client={ path="../avassa-client" }
chrono = "0.4"
examples-common = { path="../examples-common"}
hvac-common = { path="../hvac-common" }
log="0.4"
pretty_env_logger="0.4"
rand="0.7"
serde_json = "1"
tokio = { version="1", features = ["full"] }

[build-dependencies]
vergen="3"
